fix compilation under java8